# TestPDFImport

./: README.md  pyproject.toml
src/sechallenge/: api.py
tests/: test_api.py
